[package]
name = "Weather-Station"
version = "0.1.0"
authors = ["Dimitrios Vlachos <dimitri.j.vlachos@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
tokio = { version = "1.16", features = ["full"] }
serde_json = "1.0"